--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@openzeppelin/contracts": "^4.8.1",
     "@openzeppelin/contracts-upgradeable": "^4.8.1",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "dotenv": "^16.0.3"
   }
 }
